[package]
name = "pact-proxy-rs"
version = "0.0.1"
edition = "2021"
description = "Proxy server that records and serves result from PACT files"
repository = "https://github.com/NikZak/pact-proxy-rs"
license = "Apache-2.0"
keywords = ["pact", "proxy"]
categories = ["web-programming::http-server"]
authors = ["Nikolay Zakirov"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
rand = "0.8.5"
tracing = "0.1.37"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
url = "2.3.1"
pact_models = "1.0.3"
bytes = "1.3.0"
serde_json = "1.0.91"
tracing-subscriber = "0.3.16"
tiny_http = "0.12.0"
pact_mock_server = "0.9.7"
tokio = "1.24.1"
http = "0.2.8"
flame = {version = "0.2.2", optional = true }
flamer = {version = "0.4.0", optional = true }
signal-hook = "0.3.14"

[dev-dependencies]
tracing-test = "0.2.3"
test-log = {version="0.2.11", features = ["log", "trace"]}
env_logger = "0.10.0"

[features]
default = []
flame_it = ["flame", "flamer"]
